fixed placeholder/inactive module spacing

--- a/static/less/columns.less
+++ b/static/less/columns.less
@@ -35,8 +35,8 @@
   #col4 { float: right; }
 
   .module,
-  .f_settings_mode .inactive_module,
-  .f_settings_mode .placeholder { margin-bottom: 27px; }
+  &.f_settings_mode .inactive_module,
+  &.f_settings_mode .placeholder { margin-bottom: 27px; }
 }
 
 .num_columns_5 {
@@ -60,6 +60,6 @@
   #col5 { float: right; }
 
   .module,
-  .f_settings_mode .inactive_module,
-  .f_settings_mode .placeholder { margin-bottom: 21px; }
+  &.f_settings_mode .inactive_module,
+  &.f_settings_mode .placeholder { margin-bottom: 21px; }
 }
